Revert "adam cogan name fix"
This reverts commit 9fc98969a3b4c73497bc92f0794a6ea25d1d3932.

--- a/rd/map.yml
+++ b/rd/map.yml
@@ -17,7 +17,7 @@ bannerLinks:
   url: ./faq
 filterText: Regional Directors
 profiles:
-- uid: rd.adam.cogan
+- uid: rd.adam-cogan
   name: Adam Cogan
   tagline: -NET / ALM
   image:
